# api-be-card

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  activate_users.py  add_gmail_admin.py  alembic.ini  check_db_users.py  docker-compose.prod.yml  docker-compose.yml  git-workflow.md  grant_admin_role.py  grant_socio_role.py  init.sql  main.py  pyproject.toml  requirements.txt  reverse-proxy.conf
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 8597f4da69e3_add_direccion_field_to_usuarios.py  9c0d1e2f3a4b_seed_equipment_catalogs_and_default_pos.py  a1b2c3d4e5f7_add_tenant_id_to_domain_tables.py  aa12bb34cc56_add_subscription_fields_to_tenants.py  ab12cd34ef56_add_avatar_to_usuarios.py  afbe24b40bc9_initial_migration_usuarios_y_tablas_.py  b1c2d3e4f5a6_add_activo_to_equipos_soft_delete.py  b3c1f9d2a1e7_add_refresh_tokens_table.py  bb12cc34dd56_add_tenant_payments_and_plan_fields.py  c1a2b3c4d5e6_add_refresh_token_metadata_and_user_preferences.py  c2d3e4f5a6b7_add_stock_base_to_cervezas.py  cc12dd34ee56_add_payment_metadata_fields.py  (+6 more)
app/: main.py
app/core/: auth.py  config.py  (+6 more)
scripts/: __init__.py  populate_initial_data.py  reset_password.py  seed_data.py  simple_seed.py
tests/: conftest.py  test_admin_panel_api.py  test_admin_tenant_management.py  test_auth_flow.py  test_clients_create.py  test_email_verification_flow.py  test_equipo_external_identifiers.py  test_hardware_cards_wallet_flow.py  test_pricing.py  test_profile.py  test_settings.py  test_tenant_beer_styles.py  test_tenant_payments_admin.py  test_tenant_scoping.py
(+61 files in other folders)
